--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="HikeTracker App"
+    />
+    <meta name="title" property="og:title" content="HikeTracker" />
+    <meta property="og:type" content="Website" />
+    <meta 
+      name="image"
+      property="og:image"
+      content="https://live.staticflickr.com/65535/51131484916_765a977c3c_k.jpg"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>HikeTracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
